$Id: History,v 1.66 2002-11-27 17:55:06 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 27, 2002 M.Asai (run-V04-01-04)
- Fix memory leak in G4RunManager by deleting G4ExceptionHandler object.

Aug 20, 2002 R. Chytracek (run-V04-01-03)
- Introducing ResetNavigator() method needed in cases where a geometry
  has been modified between runs in order to properly re-initialize navigator's
  state
  
Aug 19, 2002 M.Asai (run-V04-01-02)
- Introducing a new G4Exception scheme
 Added : G4ExceptionHandler.hh G4ExceptionHandler.cc
 Modified : G4RunManager.hh G4RunManager.cc

Aug 13, 2002 M.Asai (run-V04-01-01)
- G4RunManager sets "eventAbortion" flag of G4Event if that particular event is
  aborted. Co-working with "event-V04-01-01" and "tracking-V04-01-00".

Aug 13, 2002 M.Dressel
- removed the files I have placed in run:
 include/G4MapPtkStandardCellScorer.hh 
 include/G4ParallelSamplerMessenger.hh  
 include/G4StandardCellScoreValues.hh
 include/G4StandardCellScorer.hh
 include/G4StandardScoreTable.hh
 include/G4StandardScorer.hh
 src/G4MapPtkStandardCellScorer.cc
 src/G4ParallelSamplerMessenger.cc
 src/G4StandardCellScorer.cc
 src/G4StandardScoreTable.cc
 src/G4StandardScoreTable.cc