@@ -1,4 +1,4 @@
-$Id: History,v 1.66 2002-11-27 17:55:06 asaim Exp $
+$Id: History,v 1.67 2002-12-04 21:53:58 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 4, 2002, M.Asai (run-V04-01-05)
+- Migration to new G4ApplicationState.
 
 Nov 27, 2002 M.Asai (run-V04-01-04)
 - Fix memory leak in G4RunManager by deleting G4ExceptionHandler object.
